# nixvim

./: README.md  flake.nix
config/: default.nix  minimal.nix
config/appearance/: default.nix
config/autopairs/: default.nix
config/autowrap/: default.nix
config/barbar/: default.nix
config/blink-cmp/: default.nix
config/conform/: default.nix  mdwrap.py
config/conform/config/: .prettierrc.json
config/conform/mdformat_dollarmath/: pyproject.toml
config/conform/mdformat_dollarmath/mdformat_dollarmath/: plugin.py
config/gitsigns/: default.nix
config/lsp/: default.nix
config/mini/: default.nix
config/nvim-cmp/: default.nix
config/nvim-cmp/luasnippets/: all.lua
config/telescope/: default.nix
config/treesitter/: default.nix
