[build-system]
requires = ["flit_core >=3.2.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mdformat_dollarmath"
version = "0.0.5"
description = "An mdformat plugin for formatting dollarmath."
requires-python = ">=3.8"
dependencies = ["mdformat >=0.7.0,<0.8.0", "mdit-py-plugins>=0.3.5"]

[project.entry-points."mdformat.parser_extension"]
dollarmath = "mdformat_dollarmath"
